--- a/LayoutSoc/Main.html
+++ b/LayoutSoc/Main.html
@@ -22,7 +22,7 @@
 
 <body ng-app="mainApp" ng-cloak>
     <div ng-controller="mainController">
-        <md-toolbar md-colors="{background: 'indigo'}">
+        <md-toolbar 14700md-colors="{background: 'indigo'}">
             <div layout="row">
                 <div flex="30" class=" raz md-toolbar-tools">
                     <div style="margin-bottom:-15px;margin-right:55px"> <h2>Beet</h2></div>
